fixed broken css link & updated readme

--- a/Javascript/Demo1/css/style.css
+++ b/Javascript/Demo1/css/style.css
@@ -3,7 +3,7 @@
 
 body{
 	font-family: Arial, Helvetica, sans-serif;
-	background-image: url(img/gohan.png);
+	background-image: url(../img/gohan.png);
 	background-size: 300px;
 	background-repeat: repeat-x;
 	background-color:#9ED6FF;
